fixed overflowing section, and increased readability of services buttons

--- a/css/index.css
+++ b/css/index.css
@@ -342,8 +342,12 @@ nav ul li a:hover {
     }
 
     .intro-info {
-        width: 100%;
-        margin: 2rem;
+        margin: 0;
+    }
+
+    .intro .intro-info {
+        width: 90%;
+        margin-left: 2rem;
     }
 
     .intro-info h1 {
@@ -365,8 +369,8 @@ nav ul li a:hover {
     .services button {
         padding: 1.25rem;
         margin: 0;
-        font-size: 0.75rem;
-        width: 100%;
+        font-size: 0.8rem;
+        widthg: 100%;
         height: 100%;
     }
 
@@ -437,9 +441,17 @@ nav ul li a:hover {
     }
 
     .questions h1 {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
+    .questions details {
+        margin: 0;
+        padding: 0;
+    }
+
+    .questions details summary {
+        font-size: 1rem;
+    }
 
 
 
@@ -452,13 +464,13 @@ nav ul li a:hover {
         place-items: center;
     }
 
-    .contact-info {
+    .footer .contact-info {
         grid-column: 1 / span 1;
         grid-row: 1 / 2;
         margin: 0;
     }
 
-    .hours {
+    .footer .hours {
         grid-row: 2 / 3;
         margin: 0;
     }
